--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "ES6"
   ],
   "dependencies": {
-    "@feathersjs/feathers": "^3.1.5",
-    "@feathersjs/socketio-client": "^1.1.0",
+    "@feathersjs/client": "^3.4.4",
     "bootstrap": "^4.0.0",
     "classlist-polyfill": "^1.2.0",
     "classnames": "^2.2.5",
