--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-helmet": "^5.2.0",
     "react-inlinesvg": "^0.8.0",
     "react-redux": "^5.0.7",
+    "react-redux-loading-bar": "^4.0.5",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.9",
     "react-transition-group": "^2.2.1",
