--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "qs": "^6.5.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-google-charts": "^1.6.6",
     "react-helmet": "^5.2.0",
     "react-inlinesvg": "^0.8.0",
     "react-redux": "^5.0.7",
@@ -44,6 +45,7 @@
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.9",
     "react-transition-group": "^2.2.1",
+    "recompose": "^0.27.1",
     "redux": "^3.7.2",
     "redux-persist": "^5.9.1",
     "redux-saga": "^0.16.0",
