--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   ],
   "dependencies": {
     "@feathersjs/client": "^3.4.4",
+    "@material-ui/core": "^1.4.2",
+    "@material-ui/icons": "^2.0.0",
     "bootstrap": "^4.0.0",
     "classlist-polyfill": "^1.2.0",
     "classnames": "^2.2.5",
@@ -35,7 +37,7 @@
     "modernizr": "^3.6.0",
     "prop-types": "^15.6.1",
     "qs": "^6.5.1",
-    "react": "^16.2.0",
+    "react": "^16.3.0",
     "react-dom": "^16.2.0",
     "react-google-charts": "^1.6.6",
     "react-helmet": "^5.2.0",
