--- a/assets/manifest.json
+++ b/assets/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React-Redux-Saga",
-  "name": "React-Redux-Saga Boilerplate",
+  "short_name": "Aplicativos Libres",
+  "name": "Aplicativos Libres Argentinos",
   "background_color": "#333333",
   "theme_color": "#333333",
   "icons": [
@@ -26,6 +26,7 @@
     }
   ],
   "start_url": "./?utm_source=web_app",
-  "display": "fullscreen",
-  "orientation": "portrait"
+  "display": "standalone",
+  "orientation": "portrait",
+  "lang": "es_419"
 }
