--- a/package.json
+++ b/package.json
@@ -120,7 +120,7 @@
     "raw-loader": "^0.5.1",
     "react-dev-utils": "^5.0.0",
     "react-error-overlay": "^4.0.0",
-    "react-hot-loader": "^4.0.0",
+    "react-hot-loader": "4.1.0",
     "redux-logger": "^3.0.6",
     "redux-mock-store": "^1.5.1",
     "redux-saga-test-plan": "^3.5.1",
