--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "lodash": "^4.17.10",
     "mobile-detect": "^1.4.2",
     "modernizr": "^3.6.0",
+    "moment": "^2.22.2",
     "prop-types": "^15.6.2",
     "qs": "^6.5.2",
     "react": "^16.4.2",
