--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "ES6"
   ],
   "dependencies": {
-    "@feathersjs/client": "^3.5.5",
+    "@feathersjs/authentication-client": "^1.0.2",
+    "@feathersjs/client": "^3.5.6",
+    "@feathersjs/socketio-client": "^1.1.0",
     "@material-ui/core": "^1.4.3",
     "@material-ui/icons": "^2.0.1",
     "bootstrap": "^4.1.3",
