--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-redux-loading-bar": "^4.0.5",
     "react-router-dom": "4.2.2",
     "react-router-redux": "^5.0.0-alpha.9",
+    "react-swipeable-views": "^0.12.16",
     "react-transition-group": "^2.4.0",
     "recompose": "^0.27.1",
     "redux": "^3.7.2",
