--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "history": "^4.7.2",
     "immutability-helper": "^2.7.1",
     "isomorphic-fetch": "^2.2.1",
+    "leaflet": "^1.3.4",
+    "leaflet-geosearch": "^2.7.0",
     "lodash": "^4.17.10",
     "mobile-detect": "^1.4.2",
     "modernizr": "^3.6.0",
@@ -43,6 +45,7 @@
     "react-google-charts": "^1.6.6",
     "react-helmet": "^5.2.0",
     "react-inlinesvg": "^0.8.1",
+    "react-leaflet": "^2.0.1",
     "react-redux": "5.0.7",
     "react-redux-loading-bar": "^4.0.5",
     "react-router-dom": "4.2.2",
