--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-dom": "^16.3.0",
     "react-google-charts": "^1.6.6",
     "react-helmet": "^5.2.0",
+    "react-infinite-scroll-component": "^4.2.0",
     "react-inlinesvg": "^0.8.1",
     "react-leaflet": "^2.0.1",
     "react-redux": "5.0.7",
