--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "qs": "^6.5.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-facebook-login": "^4.1.0",
     "react-google-charts": "^1.6.6",
     "react-helmet": "^5.2.0",
     "react-infinite-scroll-component": "^4.2.0",
